Fixed bug where text wraps when separated with space

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,21 @@
-body {
-    background-color: lightgreen;
+#myContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: hidden;
 }
 
 #myElement {
-    position: absolute;
-    border: 1px solid black;
+    border: 2px solid black;
     padding: 10px;
     background-color: lightgray;
+    white-space: nowrap;
+    position: absolute;
+    left: 100%;
+    /* move the element to the right side of the screen */
 }
